--- a/src/DotNETDevOps.JsonFunctions/DotNETDevOps.JsonFunctions.csproj
+++ b/src/DotNETDevOps.JsonFunctions/DotNETDevOps.JsonFunctions.csproj
@@ -1,12 +1,26 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+	<TargetFrameworks>netcoreapp3.1;net6.0</TargetFrameworks>
     <Version>3.0.0</Version>
   </PropertyGroup>
 
+	<ItemGroup Condition="'$(TargetFramework)'=='netcoreapp3.1'">
+		<FrameworkReference Include="Microsoft.AspNetCore.App" />
+	</ItemGroup>
+	<ItemGroup Condition="'$(TargetFramework)'=='net6.0'">
+		<PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="6.0.3" />
+		<PackageReference Include="Microsoft.Extensions.Options" Version="6.0.0" />
+	</ItemGroup>
+	
   <ItemGroup>
-    <FrameworkReference Include="Microsoft.AspNetCore.App" />
+   
+   
+   
+  
+   
+   
+   
     <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
     <PackageReference Include="Sprache" Version="2.3.0" />
   </ItemGroup>
