--- a/apps/DotNETDevOps.JsonFunctions.CLI/DotNETDevOps.JsonFunctions.CLI.csproj
+++ b/apps/DotNETDevOps.JsonFunctions.CLI/DotNETDevOps.JsonFunctions.CLI.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net8.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
@@ -11,6 +11,7 @@
     <PackageReference Include="McMaster.Extensions.Hosting.CommandLine" Version="2.3.4" />
     <PackageReference Include="Serilog.Sinks.Console" Version="3.1.1" />
     <PackageReference Include="Serilog.Extensions.Hosting" Version="2.0.0" />
+    <PackageReference Include="Sprache" Version="2.3.1" />
   </ItemGroup>
 
 </Project>
