--- a/test/DotNETDevOps.JsonFunctions.UnitTests/DotNETDevOps.JsonFunctions.UnitTests.csproj
+++ b/test/DotNETDevOps.JsonFunctions.UnitTests/DotNETDevOps.JsonFunctions.UnitTests.csproj
@@ -1,12 +1,14 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net8.0</TargetFramework>
 
     <IsPackable>false</IsPackable>
   </PropertyGroup>
 
   <ItemGroup>
+  
+    <PackageReference Include="Microsoft.AspNetCore.Cors" Version="2.2.0" />
   
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.7.0" />
     <PackageReference Include="xunit" Version="2.4.1" />
