--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -35,6 +35,9 @@ stages:
       packageVersion: $(major).$(minor).$(patch)$(packageversionType)
 
     steps:
+    - task: UseDotNet@2
+      inputs:
+        useGlobalJson: true
     # .NET Core
     # Restore NuGet packages.
     - task: DotNetCoreCLI@2
